2007-03-23  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add gtk-directory link to folder icon

2007-03-23  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Link process-stop to gtk-cancel

2007-02-19  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add links for document-revert

2007-02-16  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 0.8.2 for release

2007-02-16  Rodney Dawes  <dobey@novell.com>

	* configure.ac:
	* icon-name-mapping.pl.in:
	Update the Copyright year for 2007

2007-02-16  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add links for the KDE viewmag icons

2007-02-15  Rodney Dawes  <dobey@novell.com>

	* icon-name-mapping.pl.in: Allow INU_DATA_DIR to override the path
	where legacy-icon-mapping.xml can be found, to allow for use of
	the utility in uninstalled situations

	Fixes https://bugs.freedesktop.org/show_bug.cgi?id=9101

2007-02-15  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add gtk-select-all link to edit-select-all

	Fixes https://bugs.freedesktop.org/show_bug.cgi?id=9966

2006-08-21  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 0.8.1 for release

2006-08-21  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add links for edit-select-all

	Fixes https://bugs.freedesktop.org/show_bug.cgi?id=7764

2006-08-19  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add links for the system-run and
	application-certificate icons

2006-08-01  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 0.8.0 for release

	* legacy-icon-mapping.xml: Add mail-send and link gnome send icons
	Rename drive/media-cdrom to -optical
	Add media-flash, and link the gnome flash media icons here
	Add security-high, security-medium, and security-low with links to
	the stock_lock icons which these replace with better metaphors

2006-07-24  Rodney Dawes  <dobey@novell.com>
